--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "@tailwindcss/vite": "^4.0.0",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
+    "react-router": "^7.1.3",
+    "react-router-dom": "^7.1.3",
+    "react-slick": "^0.30.3",
+    "redux": "^5.0.1",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
