initiliased the the npm command

--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
-  "name": "vite-project",
-  "private": true,
+  "name": "foodielicious",
   "version": "0.0.0",
+  "private": true,
+  "description": "Website designed to handle multiple crud operations controlled by RBAC",
+  "homepage": "https://github.com/tewarishash12/Cafeteria_WebApp_frontend#readme",
+  "bugs": {
+    "url": "https://github.com/tewarishash12/Cafeteria_WebApp_frontend/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tewarishash12/Cafeteria_WebApp_frontend.git"
+  },
+  "license": "ISC",
+  "author": "Shashwat Tewari",
   "type": "module",
+  "main": "eslint.config.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
