--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.3",
     "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.0.0"
